--- a/package.json
+++ b/package.json
@@ -16,5 +16,9 @@
   "bugs": {
     "url": "https://github.com/Kaleb-kougl/liri-bot/issues"
   },
-  "homepage": "https://github.com/Kaleb-kougl/liri-bot#readme"
+  "homepage": "https://github.com/Kaleb-kougl/liri-bot#readme",
+  "dependencies": {
+    "dotenv": "^6.1.0",
+    "node-spotify-api": "^1.0.7"
+  }
 }
