--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
   },
   "homepage": "https://github.com/Kaleb-kougl/liri-bot#readme",
   "dependencies": {
+    "axios": "^0.18.0",
     "dotenv": "^6.1.0",
+    "moment": "^2.22.2",
     "node-spotify-api": "^1.0.7"
   }
 }
